# ECE3110_Project

./: .cache.mk  .gitignore  .helloModule.ko.cmd  .helloModule.mod.o.cmd  .helloModule.o.cmd  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  captureRate.cpp  capture_rate  cmake_install.cmake  edgeDetection.cpp  example.c  example.cpp  grab.raw  helloModule.c  helloModule.ko  helloModule.mod.c  helloWorld  helloWorld.c  modules.order  opencv_example  opencv_example.cpp  readVideo.cpp  rtthread_timer_example.cpp  testMarshall.cpp  testfile.txt
.tmp_versions/: helloModule.mod
LibProject/inc/: accelerometer.h  pendulum.h
LibProject/src/: CMakeLists.txt  accelerometer.cpp  camera.cpp  imageprocessor.cpp  motor.cpp
MainProject/src/: CMakeLists.txt  captureRate.cpp  exampleI2C.cpp  main.cpp  readVideo.cpp
src/: helloModule.c  opencv_example.cpp  saveImage.cpp
